cmake_minimum_required(VERSION 3.16)
project(DayOne)
project(DayTwo)
project(DayThree)
project(DayFour)
project(DayFive)
project(DaySix)
project(DaySeven)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(DayOne Day1_HelloWorld.cpp "Day1_HelloWorld.cpp")
add_executable(DayTwo Day2_Variables.cpp "Day2_Variables.cpp")
add_executable(DayThree Day3_Math.cpp "Day3_Math.cpp")
add_executable(DayFour Day4_IfElse.cpp "Day4_IfElse.cpp")
add_executable(DayFive Day5_Loops.cpp "Day5_Loops.cpp")
add_executable(DaySix Day6_Functions.cpp "Day6_Functions.cpp")
add_executable(DaySeven Day7_CharacterCreator.cpp "Day7_CharacterCreator.cpp")
